--- a/NBA/src/app/components/classifica-component/classifica.component.css
+++ b/NBA/src/app/components/classifica-component/classifica.component.css
@@ -62,49 +62,45 @@
     }
 }
 
+
 input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-    position: relative;
-}
-
-.toggle-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.toggle {
-    position: relative;
+	height: 0px;
+	left: 0;
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	width: 0px;
 }
 
 label.toggle-item {
-    width: 5rem;
-    background: #ACDEFF;
-    height: 20px;
-    display: inline-block;
-    border-radius: 50px;
-    position: relative;
-    cursor: pointer;
-
-    &:before {
-        display: block;
-        width: 2.3em;
-        height: 2.3em;
-        top: 0.25em;
-        left: 0.25em;
-        border-radius: 2em;
-    }
+	width: 5rem;
+	background: #00000083;
+	height: 20px;
+	display: inline-block;
+	border-radius: 50px;
+	position: relative;
+	transition: all .3s ease;
+	cursor: pointer;
 }
 
 .heart-rollover {
-    width: 5.5rem;
-    label {
+	label {
+		&:before {
+			content: none;
+		}
+		.block-heart {
+			display: inline-block;
+			position: absolute;
+			width: 2.5em;
+			height: 2.5em;
+			top: 0;
+			left: 0;
+			transition: .6s ease;
+		}
         .heart {
             position: relative;
             width: 40px;
-            height: 60px;
+            height: 50px;
             animation: heartbeat 1s infinite;
             margin: 0;
             bottom: .5em;
@@ -147,67 +143,61 @@ label.toggle-item {
             -o-transform-origin: 100% 100%;
             transform-origin: 100% 100%;
         }
-    }
+
+		&:before {
+			border-color: white;
+			background: white;
+		}
+	}
 }
 
-#cuore:checked{
-    +label {
+
+#cuore:checked  {
+	+ label {
+		.block-heart {
+			left: 3.5rem;
+		}
         .heart {
             &:after {
-                animation: colorChangeAfter .3s steps(1) 0s forwards alternate;
+                animation: colorChangeAfter .3s 0s forwards;
             }
 
             &:before {
-                animation: colorChangeBefore .3s steps(1) 0s forwards alternate;
+                animation: colorChangeBefore .3s 0s forwards;
             }
         }
-    }
+	}
 }
 
-
-
-#cuore:focus:not(:checked){
-    +label {
-        .heart {
-            &:after {
-                animation: colorChangeAfterReturn .3s steps(1) 0s forwards alternate;
-            }
-
-            &:before {
-                animation: colorChangeBeforeReturn .3s steps(1) 0s forwards alternate;
-            }
-        }
-    }
-}
 
 @keyframes colorChangeAfter {
     0% {
         background-color: black;
-        transform: translateX(0rem) rotate(45deg);
+        transform: rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     25% {
         background-color: rgb(71, 51, 51);
-        transform: translateX(1rem) rotate(45deg);
+        transform: rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     50% {
         background-color: rgb(133, 66, 66);
-        transform: translateX(2rem) rotate(45deg);
+        transform: rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     75% {
         background-color: rgb(180, 40, 40);
-        transform: translateX(3rem) rotate(45deg);
+        transform: rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     100% {
         background-color: red;
-        transform: translateX(4rem) rotate(45deg);
+        transform: rotate(45deg);
         transform-origin: 100% 100%;
     }
 }
@@ -215,95 +205,32 @@ label.toggle-item {
 @keyframes colorChangeBefore {
     0% {
         background-color: black;
-        transform: translateX(0rem) rotate(-45deg);
+        transform: rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     25% {
         background-color: rgb(71, 51, 51);
-        transform: translateX(1rem) rotate(-45deg);
+        transform: rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     50% {
         background-color: rgb(133, 66, 66);
-        transform: translateX(2rem) rotate(-45deg);
+        transform: rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     75% {
         background-color: rgb(180, 40, 40);
-        transform: translateX(3rem) rotate(-45deg);
+        transform: rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     100% {
         background-color: red;
-        transform: translateX(4rem) rotate(-45deg);
+        transform: rotate(-45deg);
         transform-origin: 0 100%;
     }
 }
 
-@keyframes colorChangeAfterReturn {
-    0% {
-        background-color: red;
-        transform: translateX(4rem) rotate(45deg);
-        transform-origin: 100% 100%;
-    }
-
-    25% {
-        background-color: rgb(180, 40, 40);
-        transform: translateX(3rem) rotate(45deg);
-        transform-origin: 100% 100%;
-    }
-
-    50% {
-        background-color: rgb(133, 66, 66);
-        transform: translateX(2rem) rotate(45deg);
-        transform-origin: 100% 100%;
-    }
-
-    75% {
-        background-color: rgb(71, 51, 51);
-        transform: translateX(1rem) rotate(45deg);
-        transform-origin: 100% 100%;
-    }
-
-    100% {
-        background-color: black;
-        transform: translateX(0rem) rotate(45deg);
-        transform-origin: 100% 100%;
-    }
-}
-
-@keyframes colorChangeBeforeReturn {
-    0% {
-        background-color: red;
-        transform: translateX(4rem) rotate(-45deg);
-        transform-origin: 0 100%;
-    }
-
-    25% {
-        background-color: rgb(180, 40, 40);
-        transform: translateX(3rem) rotate(-45deg);
-        transform-origin: 0 100%;
-    }
-
-    50% {
-        background-color: rgb(133, 66, 66);
-        transform: translateX(2rem) rotate(-45deg);
-        transform-origin: 0 100%;
-    }
-
-    75% {
-        background-color: rgb(71, 51, 51);
-        transform: translateX(1rem) rotate(-45deg);
-        transform-origin: 0 100%;
-    }
-
-    100% {
-        background-color: black;
-        transform: translateX(0rem) rotate(-45deg);
-        transform-origin: 0 100%;
-    }
-}
