logica finita funzionante, manca estetica da ultimare

--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -12,7 +12,7 @@
             </li>
         </ul>
     </div>
-    <div class="lg:w-full w-[95%] lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-2 flex justify-end">
+    <div class="lg:w-full w-[95%] lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-2 flex justify-end" id="bottoni-classifica">
         <button class="rounded-full bg-[#BAD5E6] lg:px-6 px-3 lg:py-1 text-sm hover:underline" (click)="percentageStanding=true;
             nameStanding=false;
             crescente=false;
@@ -22,7 +22,7 @@
             RESET FILTRI
         </button>
         <div class="rounded-full lg:px-6 px-3 lg:py-1 text-sm hover:underline">
-            <div class="heart-rollover" (click)="favouriteStanding=!favouriteStanding; toggleChecked(); functionChangeStandingWithFavourite(favouriteStanding, $event)">
+            <div class="heart-rollover" (click)="favouriteStanding=!favouriteStanding; toggleChecked(); functionChangeStandingWithFavourite(favouriteStanding, $event);">
                 <input id="cuore" type="checkbox" />
                 <label class="toggle-item" for="cuore">
                     <div class="block-heart">
@@ -53,7 +53,6 @@
                             crescente=!crescente;
                             winStanding=false;
                             lossStanding=false;
-                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">Nome </p>
                     </td>
@@ -64,7 +63,6 @@
                             nameStanding=false;
                             winStanding=false;
                             lossStanding=false;
-                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">{{vittore}}</p>
                     </td>
@@ -75,7 +73,6 @@
                             winStanding=true;
                             crescente=!crescente;
                             lossStanding=false;
-                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">{{vinte}}</p>
                     </td>
@@ -86,7 +83,6 @@
                             winStanding=false;
                             lossStanding=true;
                             crescente=!crescente;
-                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">{{sconfitte}}</p>
                     </td>
@@ -102,9 +98,7 @@
                         <p class="w-full text-center">Ultimi Match</p>
                     </td>
                     <td class="lg:w-[8%] w-[6%]">
-                        <p class="w-full text-center hover:underline" (click)="
-                            favouriteStanding=!favouriteStanding;
-                            functionChangeStandingWithFavourite(favouriteStanding, $event) ">❤️</p>
+                        <p class="w-full text-center">❤️</p>
                     </td>
                 </tr>
             </thead>
@@ -164,7 +158,7 @@
                             crescente=!crescente;
                             winStanding=false;
                             lossStanding=false;
-                            favouriteStanding=false;
+
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">Nome </p>
                     </td>
@@ -175,7 +169,7 @@
                             nameStanding=false;
                             winStanding=false;
                             lossStanding=false;
-                            favouriteStanding=false;
+
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">{{vittore}}</p>
                     </td>
@@ -186,7 +180,7 @@
                             winStanding=true;
                             crescente=!crescente;
                             lossStanding=false;
-                            favouriteStanding=false;
+
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">{{vinte}}</p>
                     </td>
@@ -197,7 +191,7 @@
                             winStanding=false;
                             lossStanding=true;
                             crescente=!crescente;
-                            favouriteStanding=false;
+
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">{{sconfitte}}</p>
                     </td>
@@ -213,9 +207,7 @@
                         <p class="w-full text-center">Ultimi Match</p>
                     </td>
                     <td class="lg:w-[8%] w-[6%]">
-                        <p class="w-full text-center hover:underline" (click)="
-                            favouriteStanding=!favouriteStanding;
-                            functionChangeStandingWithFavourite(favouriteStanding, $event) ">❤️</p>
+                        <p class="w-full text-center">❤️</p>
                     </td>
                 </tr>
             </thead>
