--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -33,7 +33,7 @@
                 <app-classifica [isParziale]="true" class="lg:w-[85%] w-full mt-10">
 
                 </app-classifica>
-                <div class="w-full h-8 mt-10 flex justify-center items-center">
+                <div class="w-full h-auto mt-10 flex justify-center items-center">
                     <button class="rounded-full bg-secondary lg:px-8 px-5 py-2 text-white font-bold text-sm lg:text-xl hover:underline" [routerLink]="['/classifica']">
                         Guarda Tutta la classifica
                     </button>
