--- a/NBA/src/app/components/classifica-component/classifica.component.css
+++ b/NBA/src/app/components/classifica-component/classifica.component.css
@@ -10,16 +10,16 @@
     border-bottom: 2px solid white;
 }
 
-#contenitore-tabella-classifica tbody tr:last-child td {
-    border-bottom: 0px;
-}
-
 #contenitore-tabella-classifica tbody tr:nth-child(odd) td:first-child {
     background-color: #acdeff;
 }
 
 #contenitore-tabella-classifica tbody tr td:first-child {
     border-bottom: 2px solid #dcf1ff;
+}
+
+#contenitore-tabella-classifica tbody tr:last-child td {
+    border-bottom: 0;
 }
 
 #contenitore-tabella-classifica td {
@@ -63,7 +63,7 @@
 }
 
 
-input {
+#bottoni-classifica input {
 	height: 0px;
 	left: 0;
 	opacity: 0;
@@ -72,7 +72,7 @@ input {
 	width: 0px;
 }
 
-label.toggle-item {
+#bottoni-classifica label.toggle-item {
 	width: 5rem;
 	background: #00000083;
 	height: 20px;
@@ -83,7 +83,7 @@ label.toggle-item {
 	cursor: pointer;
 }
 
-.heart-rollover {
+#bottoni-classifica .heart-rollover {
 	label {
 		&:before {
 			content: none;
@@ -151,8 +151,7 @@ label.toggle-item {
 	}
 }
 
-
-#cuore:checked  {
+#bottoni-classifica #cuore:checked  {
 	+ label {
 		.block-heart {
 			left: 3.5rem;
@@ -233,4 +232,3 @@ label.toggle-item {
         transform-origin: 0 100%;
     }
 }
-
