--- a/NBA/src/app/views/classifica-page/classifica-page.component.html
+++ b/NBA/src/app/views/classifica-page/classifica-page.component.html
@@ -9,8 +9,8 @@
         <div class="w-full h-6 bg-secondary"></div>
     </div>
     <div class="flex justify-center">
-        <div class="container lg:w-[90%] w-full flex justify-center">
-            <div class="lg:w-[85%] w-full">
+        <div class="container w-full flex justify-center">
+            <div class="lg:w-[75%] w-full">
                 <app-classifica [isParziale]="false">
                 </app-classifica>
             </div>
