--- a/NBA/src/app/components/classifica-component/classifica.component.css
+++ b/NBA/src/app/components/classifica-component/classifica.component.css
@@ -106,7 +106,7 @@
             bottom: .5em;
             left: -.5em;
         }
-
+        
         .heart:before,
         .heart:after {
             position: absolute;
@@ -115,7 +115,7 @@
             top: 0;
             width: 20px;
             height: 35px;
-            background: black;
+            background: #acdeff;
             -moz-border-radius: 20px 20px 0 0;
             border-radius: 20px 20px 0 0;
             -webkit-transform: rotate(-45deg);
@@ -171,25 +171,25 @@
 
 @keyframes colorChangeAfter {
     0% {
-        background-color: black;
+        background-color: #acdeff;
         transform: rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     25% {
-        background-color: rgb(71, 51, 51);
+        background-color: #c2a2ba;
         transform: rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     50% {
-        background-color: rgb(133, 66, 66);
+        background-color: #d47182;
         transform: rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     75% {
-        background-color: rgb(180, 40, 40);
+        background-color: #ee2c33;
         transform: rotate(45deg);
         transform-origin: 100% 100%;
     }
@@ -203,25 +203,25 @@
 
 @keyframes colorChangeBefore {
     0% {
-        background-color: black;
+        background-color: #acdeff;
         transform: rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     25% {
-        background-color: rgb(71, 51, 51);
+        background-color: #c2a2ba;
         transform: rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     50% {
-        background-color: rgb(133, 66, 66);
+        background-color: #d47182;
         transform: rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     75% {
-        background-color: rgb(180, 40, 40);
+        background-color: #ee2c33;
         transform: rotate(-45deg);
         transform-origin: 0 100%;
     }
