--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
@@ -531,13 +531,13 @@
             <div class="w-full flex flex-nowrap">
               <div class="w-[20%] h-full rounded-xl pt-2 pb-2">
                 <p class="text-xl font-bold text-center">SALTA A:</p>
-                <div class="flex justify-center bg-primary rounded-xl m-4 text-center" *ngFor="let item of jsonInfo; let i = index">
-                  <a [href]="'#' + jsonInfo[i].id" class="m-4 text-base  text-white">{{jsonInfo[i].titolo}}</a>
+                <div (click)="scrollToSection(i)" [class.selected]="selectedSection === i" class="flex justify-center bg-primary rounded-xl m-4 text-center" *ngFor="let item of jsonInfo; let i = index">
+                  <button class="m-4 text-base  text-white">{{jsonInfo[i].titolo}}</button>
                 </div>
               </div>
               <div class="w-[80%] h-full pl-3">
-                <div class="bg-[#ACDEFF]" *ngFor="let item of jsonInfo; let i = index" [id]="jsonInfo[i].id">
-                    <p class="m-2 text-basefont-bold text-xl">{{jsonInfo[i].titolo}}</p>
+                <div  [class.selected]="selectedSection === i" class="bg-[#ACDEFF]" *ngFor="let item of jsonInfo; let i = index" >
+                    <p class="m-2 text-basefont-bold text-xl" [id]="'' + jsonInfo[i].id">{{jsonInfo[i].titolo}}</p>
                   <div class=" bg-[#DCF1FF] p-4">
                     <p class="text-lg mt-2"><span>&bull;</span>{{jsonInfo[i].sottotitolo}}</p>
                     <p class="text-lg mt-2">{{jsonInfo[i].descrizione}}</p>
