--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -42,6 +42,18 @@
         </div>
     </div>
 </section>
+<section>
+    <div class="w-full pt-12">
+        <div class="flex justify-center altezza">
+            <img class="object-cover w-[50%] rounded-full" src="https://hd2.tudocdn.net/733420?w=1200&h=900" alt="">
+        </div>
+        <div class="flex justify-center">
+            <button class="w-[40%] rounded-full bg-secondary lg:px-8 px-5 py-2 text-white font-bold text-sm lg:text-xl hover:underline" [routerLink]="['/']">
+                SCOPRI IL NOSTRO PODCACAST
+            </button>
+        </div> 
+    </div>
+</section>
 <footer class="mt-20">
     <app-footer></app-footer>
 </footer>
