--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -299,7 +299,7 @@
         </div>
         <div class="w-full h-6 bg-secondary"></div>
       </div>
-      <div class="sm:w-full w-full h-auto mt-10 flex flex-wrap">
+      <div class="w-full h-auto mt-10 flex flex-wrap">
         <app-card-partita class="w-1/3"></app-card-partita>
         <app-card-partita class="w-1/3"></app-card-partita>
         <app-card-partita class="w-1/3"></app-card-partita>
@@ -321,6 +321,95 @@
           <h2 class="text-white text-4xl font-bold">ULTIMI MATCH</h2>
         </div>
         <div class="w-full h-6 bg-secondary"></div>
+      </div>
+      <div class="w-full h-auto">
+        <div class="w-[50%] flex flex-wrap mt-20">
+          <table class="w-[50%] ml-32">
+            <thead class="bg-primary text-white">
+              <tr>
+                <th>data</th>
+                <th>SQUADRE</th>
+                <th>PUNTEGGIO</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>ora</td>
+                <td>squadre</td>
+                <td>punteggio</td>
+              </tr>
+              <tr>
+                <td>ora</td>
+                <td>squadre</td>
+                <td>punteggio</td>
+              </tr>
+              <tr>
+                <td>ora</td>
+                <td>squadre</td>
+                <td>punteggio</td>
+              </tr>
+              <tr>
+                <td>ora</td>
+                <td>squadre</td>
+                <td>punteggio</td>
+              </tr>
+              <tr>
+                <td>ora</td>
+                <td>squadre</td>
+                <td>punteggio</td>
+              </tr>
+              <tr>
+                <td>ora</td>
+                <td>squadre</td>
+                <td>punteggio</td>
+              </tr>
+              <tr>
+                <td>ora</td>
+                <td>squadre</td>
+                <td>punteggio</td>
+              </tr>
+              <tr>
+                <td>ora</td>
+                <td>squadre</td>
+                <td>punteggio</td>
+              </tr>
+              <tr>
+                <td>ora</td>
+                <td>squadre</td>
+                <td>punteggio</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="w-[50%] flex-col">
+          <div><button class="bg-primary rounded-xl p-2">
+            <p>TABELLINO</p>
+          </button></div>
+          <div><button class="bg-primary rounded-xl p-2">
+            <p>TABELLINO</p>
+          </button></div>
+          <div><button class="bg-primary rounded-xl p-2">
+            <p>TABELLINO</p>
+          </button></div>
+          <div><button class="bg-primary rounded-xl p-2">
+            <p>TABELLINO</p>
+          </button></div>
+          <div><button class="bg-primary rounded-xl p-2">
+            <p>TABELLINO</p>
+          </button></div>
+          <div><button class="bg-primary rounded-xl p-2">
+            <p>TABELLINO</p>
+          </button></div>
+          <div><button class="bg-primary rounded-xl p-2">
+            <p>TABELLINO</p>
+          </button></div>
+          <div><button class="bg-primary rounded-xl p-2">
+            <p>TABELLINO</p>
+          </button></div>
+          <div><button class="bg-primary rounded-xl p-2">
+            <p>TABELLINO</p>
+          </button></div>
+        </div>
       </div>
     </div>
   </div>
