--- a/NBA/src/app/components/card-partita/card-partita.component.html
+++ b/NBA/src/app/components/card-partita/card-partita.component.html
@@ -23,11 +23,12 @@
                     <img class="object-contain h-full" src="https://picsum.photos/id/237/200/" alt="immagine">
                 </div>
             </div>
-            <div class="w-full h-1/5 fleex justify-center items-center">
+            <div class="w-full h-1/6 flex justify-center items-center">
                 <p class="w-full flex justify-center items-center">3:18 4°Q</p>
             </div>
-            <div class="w-full h-1/5 flex justify-center items-center">
-                <div class="w-[75%] h-1/2 border-black rounded-full flex flex-nowrap justify-center">
+            <div class="w-full h-1/4 flex flex-wrap justify-center items-center">
+                <div class="w-[75%] h-1/3 flex justify-center">{{id}}</div>
+                <div class="w-[75%] h-1/3 border-black rounded-full flex flex-nowrap justify-center">
                     <div class="w-[65%] bg-red-600 rounded-l-full"></div>
                     <div class="w-[45%] bg-blue-600 rounded-r-full"></div>
                 </div>
