--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<!-- <nav class="h-16">
-    <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-16">
+<!-- <nav class="h-16 z-50">
+    <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-16 z-50">
         <div class="w-[10%] flex justify-center items-center">
             <img routerLink="/home" class="object-contain h-[80%]" src="assets/logo-slam-stats.png" alt="">
         </div>
@@ -27,8 +27,8 @@
     </div>
 </nav> -->
 
-<nav class="h-16">
-    <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-16">
+<nav class="h-16 z-50">
+    <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-16 z-50">
         <div class="w-[10%] flex justify-center items-center">
             <img routerLink="/home" class="object-contain h-[80%]" src="assets/logo-slam-stats.png" alt="">
         </div>
@@ -60,8 +60,8 @@
     </div>
 </nav>
 
-<!-- <nav class="h-20">
-    <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-20">
+<!-- <nav class="h-20 z-50">
+    <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-20 z-50">
         <div class="w-[10%] flex justify-center items-center">
             <img routerLink="/home" class="object-contain h-full py-3" src="assets/logo-slam-stats.png" alt="">
         </div>
@@ -91,8 +91,8 @@
     </div>
 </nav> -->
 <!-- 
-<nav class="h-20">
-    <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-20">
+<nav class="h-20 z-50">
+    <div class="bg-secondary w-full flex flex-nowrap fixed top-0 h-20 z-50">
         <div class="w-[10%] flex justify-center items-center">
             <img routerLink="/home" class="object-contain h-full py-3" src="assets/logo-slam-stats.png" alt="">
         </div>
