ultimato estetica home, classifica

--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -12,10 +12,10 @@
             </li>
         </ul>
     </div>
-    <div class="lg:w-full w-[95%] lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-2 flex justify-end" id="bottoni-classifica">
-        <button *ngIf="percentageStanding==true && crescente==false && ControlChecked()==false" class="rounded-full lg:px-6 px-3 lg:py-1 text-sm hover:underline disabled:opacity-20">
-            RESET FILTRI
-        </button>
+    <div class="lg:w-full w-[95%] lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-4 flex justify-end" id="bottoni-classifica">
+        <div *ngIf="percentageStanding==true && crescente==false && ControlChecked()==false" class="flex items-center rounded-full lg:px-6 px-3 lg:py-1 text-sm bg-[#BAD5E6] opacity-50 ">
+            <p>RESET FILTRI</p>
+        </div>
         <button *ngIf="percentageStanding==false || crescente==true || ControlChecked()==true" class="rounded-full bg-[#BAD5E6] lg:px-6 px-3 lg:py-1 text-sm hover:underline" (click)="percentageStanding=true;
             nameStanding=false;
             crescente=false;
