--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -45,11 +45,11 @@
 </section>
 <section>
     <div class="w-full pt-12">
-        <div class="flex justify-center h-[150px] z-10">
-            <img class="object-cover w-[50%] rounded-full z-10" src="../../../assets/foto-spotify.png" alt="">
+        <div class="flex justify-center lg:h-[150px] h-[75px] z-10">
+            <img class="object-cover lg:w-[50%] w-[90%] rounded-full  z-10" src="../../../assets/foto-spotify.png" alt="">
         </div>
         <div class="flex justify-center items-end z-0">
-            <button class="w-[40%] rounded-full h-[70px] z-0 relative bottom-6 bg-secondary lg:px-8 px-5 pt-6 text-white font-bold text-sm lg:text-xl hover:underline" [routerLink]="['/']">
+            <button class="lg:w-[40%] w-[80%] rounded-full lg:h-[70px] h-[50px] z-0 relative bottom-6 bg-secondary lg:px-8 px-5 pt-6 text-white font-bold text-sm lg:text-xl hover:underline" [routerLink]="['/']">
                 SCOPRI IL NOSTRO PODCACAST
             </button>
         </div> 
