--- a/NBA/src/app/views/calendario-page/calendario-page.component.css
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.css
@@ -1,4 +1,6 @@
-
+.margine{
+    margin-bottom: 6px;
+}
 
 
 tr{
@@ -8,6 +10,10 @@ tr{
 
 tr:not(:last-child){
     border-bottom: 5px solid white;
+}
+
+td{
+    height: 60px;
 }
 
 td:first-child{
