--- a/NBA/src/app/views/calendario-page/calendario-page.component.css
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.css
@@ -1,12 +1,6 @@
-.margine{
-    margin-bottom: 6px;
-}
-
-
 tr{
     text-align: center;
 }
-
 
 tr:not(:last-child){
     border-bottom: 5px solid white;
@@ -15,14 +9,12 @@ tr:not(:last-child){
 td{
     height: 60px;
 }
-=======
-
 
 td:first-child{
-    background-color: #ACDEFF;
-    
+    background-color: #ACDEFF; 
 }
 
-td:not(:first-child){
+td:nth-child(2), td:nth-child(3){
     background-color: #DCF1FF;
 }
+
