iniziato pagina tabellino
manca versione mobile, logica e finire tabella sotto sia estetica sia logica.
mancano anche i json

--- a/NBA/src/app/components/card-partita/card-partita.component.html
+++ b/NBA/src/app/components/card-partita/card-partita.component.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="w-full h-1/5 rounded-b-3xl flex justify-center items-center bg-primary">
-                <button>
+                <button [routerLink]="'/tabellino'">
                     <p class="text-white">TABELLINO</p>
                 </button>
             </div>
