--- a/NBA/src/app/views/partita-page/partita-page.component.html
+++ b/NBA/src/app/views/partita-page/partita-page.component.html
@@ -62,19 +62,19 @@
         <div class="container w-full flex flex-wrap justify-center">
             <div class="w-full flex justify-center">
                 <div class="flex flex-wrap justify-center">
-                    <button class="h-12 w-40 px-4 py-2 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='teamHome'" [class.text-white]="tabsSelected=='teamHome'" (click)="tabsSelected='teamHome'">
+                    <button class="h-8 w-40 px-4 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='teamHome'" [class.text-white]="tabsSelected=='teamHome'" (click)="tabsSelected='teamHome'">
                         nome squadra
                     </button>
                     <div class="w-[60%] h-1 bg-secondary mt-1" *ngIf="tabsSelected==='teamHome'"></div>
                 </div>
                 <div class="flex flex-wrap justify-center">
-                    <button class="h-12 w-40 px-4 py-2 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='teamAway'" [class.text-white]="tabsSelected=='teamAway'" (click)="tabsSelected='teamAway'">
+                    <button class="h-8 w-40 px-4 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='teamAway'" [class.text-white]="tabsSelected=='teamAway'" (click)="tabsSelected='teamAway'">
                         nome squadra
                     </button>
                     <div class="w-[60%] h-1 bg-secondary mt-1" *ngIf="tabsSelected==='teamAway'"></div>
                 </div>
                 <div class="flex flex-wrap justify-center">
-                    <button class="h-12 w-40 px-4 py-2 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='statics'" [class.text-white]="tabsSelected=='statics'" (click)="tabsSelected='statics'">
+                    <button class="h-8 w-40 px-4 mx-2 rounded-full bg-[#DCF1FF]" [class.bg-secondary]="tabsSelected=='statics'" [class.text-white]="tabsSelected=='statics'" (click)="tabsSelected='statics'">
                         statics
                     </button>
                     <div class="w-[60%] h-1 bg-secondary mt-1" *ngIf="tabsSelected==='statics'"></div>
@@ -149,9 +149,15 @@
                                 <p class="text-center">10</p>
                             </td>
                             <td class="w-[60%] p-0 border-b-4 border-r-4 border-white bg-[#ACDEFF]">
-                                <div class="flex flex-nowrap justify-center">
-                                    <div class="w-1/2">
-                                        <div multiHandleRangeSlider [defaultValues]="defaultValues" [newSelectionValues]="newSelectionValues" name="range-slider"></div>
+                                <div class="flex flex-wrap justify-center">
+                                    <p class="w-full text-center">tiri da 3 punti</p>
+                                    <div class="w-[50%] h-4 flex justify-center items-center flex-nowrap">
+                                        <div class="w-[50%] h-4 flex justify-end bg-black">
+                                            <div class="w-[{{lato1}}%] bg-red-500"></div>
+                                        </div>
+                                        <div class="w-[50%] h-4 flex justify-start bg-black">
+                                            <div class="w-[{{lato2}}%] bg-blue-500"></div>
+                                        </div>
                                     </div>
                                 </div>
                             </td>
