--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -38,7 +38,7 @@
                 <li routerLink="/classifica"><button>CLASSIFICA</button></li>
                 <li routerLink="/calendario"><button>CALENDARIO</button></li>
                 <li routerLink="/squadre"><button>SQUADRE</button></li>
-                <li routerLink="/storia&regole"><button>STORIA & REGOLE</button></li>
+                <li routerLink="/storia&regole"><button>REGOLE & GLOSSARIO</button></li>
                 <li routerLink="/blog"><button>BLOG</button></li>
             </ul>
         </div>
