--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -182,7 +182,7 @@
       <div class="container flex justify-center w-full">
         <div class="lg:w-[90%] w-full flex justify-center">
           <div class="lg:w-full w-full flex justify-center">
-            <table class="lg:w-full w-[90%] ">
+            <table class="lg:w-full w-full ">
               <thead class="bg-primary text-white w-full">
                 <tr>
                   <th class="w-[10%]">data</th>
