--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <header class="h-screen w-full">
-    <img class="object-fill w-full h-screen" src="../../../assets/sfondo-home.png" alt="">
+    <img class="object-fill w-full h-screen mt-16" src="../../../assets/sfondo-home.png" alt="">
     <app-navbar></app-navbar>
 </header>
 <section class="mt-16">
