--- a/NBA/src/app/components/footer/footer.component.html
+++ b/NBA/src/app/components/footer/footer.component.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="w-1/4 flex flex-col justify-center items-center pb-5 h-full">
                     <h3>CERCA</h3>
-                    <div class="bg-gray-500 w-[75%] h-10 mr-5 mt-5"></div>
+                    <input type="text" class="rounded-full mt-4 text-center text-black" placeholder="cerca">
                 </div>
             </div>
         </div>
@@ -46,3 +46,5 @@
         <p>Powered By: Slam Dunkers</p>
     </div>
 </div>
+
+ 
