--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
@@ -2,7 +2,7 @@
 <section>
   <div class="mb-10">
     <div class="w-full h-20 bg-primary flex justify-center items-center">
-      <h2 class="text-white text-4xl font-bold">STORIE & REGOLE</h2>
+      <h2 class="text-white text-4xl font-bold">REGOLE & GLOSSARIO</h2>
     </div>
     <div class="w-full h-6 bg-secondary"></div>
   </div>
